--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,6 @@
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "husky": "^7.0.4"
+    "husky": "^7.0.0"
   }
 }
