Chore : dayjs 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo 'Hello Gabia, woof!'",
     "prepare": "husky install",
-    "clean" : "node clean.js"
+    "clean": "node clean.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "dayjs": "^1.11.0",
     "glob": "^8.0.1",
     "husky": "^7.0.0"
   }
