Chore : 데일리회고 문서 자동 이동 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo 'Hello Gabia, woof!'",
     "prepare": "husky install",
-    "clean": "node clean.js"
+    "clean": "node clean.js",
+    "mv": "node dailyNoteMove.js"
   },
   "keywords": [],
   "author": "",
