--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo 'Hello Gabia, woof!'",
     "prepare": "husky install",
     "clean": "node clean.js",
-    "mv": "node dailyNoteMove.js"
+    "mv": "node dailyNoteMove.js && git add -A ."
   },
   "keywords": [],
   "author": "",
